# SAP-IT

./: AutoAddUserToADandMail.ps1  SAP_IT.ps1  UpdateSnipeIT.ps1  rdpreset.bat
.github/workflows/: build.yml
sap_it_rust/: Cargo.toml  README.md  servers.example.toml
sap_it_rust/src/: config.rs  connection.rs  main.rs  ui.rs
sap_it_rust/src/platform/: mod.rs  unix.rs  windows.rs
sap_it_rust/src/tui/: app.rs  event.rs  mod.rs  ui.rs
sap_it_rust/tests/: integration_tests.rs
